[gd_scene load_steps=18 format=3 uid="uid://7l64p8y5j373"]

[ext_resource type="Script" path="res://src/entities/barracuda/barracuda.gd" id="1_2vlro"]
[ext_resource type="Material" uid="uid://bfc34sndr1832" path="res://res/materials/shake/shake_material.tres" id="2_332jp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c40hq"]
size = Vector2(53.5, 36)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wuve0"]
radius = 26.0
height = 128.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1nphv"]
radius = 15.0
height = 52.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bnnsw"]
radius = 20.0
height = 52.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nt81s"]
radius = 8.0
height = 130.0

[sub_resource type="Animation" id="Animation_7k0d7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/MouthBottom:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.139626]
}

[sub_resource type="Animation" id="Animation_bitca"]
resource_name = "eat"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/MouthBottom:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(2, 1, 2, 1, 2, 1),
"update": 0,
"values": [0.523599, 0.139626, 0.279253, 0.139626, 0.279253, 0.139626]
}

[sub_resource type="Animation" id="Animation_ad0nm"]
resource_name = "open_mouth"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/MouthBottom:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [0.139626, 0.523599]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bkgi0"]
_data = {
"RESET": SubResource("Animation_7k0d7"),
"eat": SubResource("Animation_bitca"),
"open_mouth": SubResource("Animation_ad0nm")
}

[sub_resource type="Animation" id="Animation_isvuq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ncfvq"]
resource_name = "swim"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.08165e-12, -30), Vector2(2.08165e-12, 30), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ya3fx"]
_data = {
"RESET": SubResource("Animation_isvuq"),
"swim": SubResource("Animation_ncfvq")
}

[sub_resource type="Animation" id="Animation_urr0k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_og1ru"]
resource_name = "hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.901961, 0, 0.129412, 1), Color(1, 1, 1, 1), Color(0.901961, 0, 0.129412, 1), Color(1, 1, 1, 1), Color(0.901961, 0, 0.129412, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7bjpq"]
_data = {
"RESET": SubResource("Animation_urr0k"),
"hurt": SubResource("Animation_og1ru")
}

[node name="Barracuda" type="Node2D"]
script = ExtResource("1_2vlro")

[node name="Sprite" type="Node2D" parent="."]

[node name="MouthTop" type="Polygon2D" parent="Sprite"]
material = ExtResource("2_332jp")
position = Vector2(53, 19.0001)
rotation = -0.0941832
color = Color(0.498039, 0.254902, 0.701961, 1)
polygon = PackedVector2Array(-11, -43, 12.635, -40.5121, 27, -39, 42.0612, -29.1161, 59, -18, 30.0392, -17.1482, 7.3241, -16.4801, -9, -16)

[node name="TeethTop" type="Polygon2D" parent="Sprite/MouthTop"]
show_behind_parent = true
material = ExtResource("2_332jp")
polygon = PackedVector2Array(-5.0881, -20.5697, 1.22257, -12.9424, 3.68393, -17.7321, 8.7169, -7.21219, 11.5544, -15.9842, 16.9636, -9.44654, 19.7071, -17.223, 24.0266, -9.7838, 32.9316, -18.9871, 35.8794, -7.65971, 41.7976, -17.1452, 52.804, -6.06096, 51.0399, -19.2855)

[node name="MouthBottom" type="Polygon2D" parent="Sprite"]
material = ExtResource("2_332jp")
position = Vector2(35, 22.0001)
rotation = 0.139626
color = Color(0.498039, 0.254902, 0.701961, 1)
polygon = PackedVector2Array(-13, 5, 7.85072, 5.9929, 29, 7, 49.8489, -4.08983, 76, -18, 59.4847, -18.3979, 38.2044, -18.9107, 13.3606, -19.5094, -7, -20)

[node name="TeethBottom" type="Polygon2D" parent="Sprite/MouthBottom"]
show_behind_parent = true
material = ExtResource("2_332jp")
position = Vector2(64.6959, -37.2886)
rotation = 3.1044
color = Color(0.772549, 0.772549, 0.772549, 1)
polygon = PackedVector2Array(-5.0881, -20.5697, 1.22257, -12.9424, 3.68393, -17.7321, 8.7169, -7.21219, 11.5544, -15.9842, 16.9636, -9.44654, 19.7071, -17.223, 24.0266, -9.7838, 32.9316, -18.9871, 35.8794, -7.65971, 41.7976, -17.1452, 52.804, -6.06096, 51.0399, -19.2855)

[node name="FingTop" type="Polygon2D" parent="Sprite"]
material = ExtResource("2_332jp")
position = Vector2(49, 18.0001)
rotation = -0.0795578
color = Color(0.498039, 0.254902, 0.701961, 1)
polygon = PackedVector2Array(-29.7961, -41.4993, -54.9623, -65.5755, -54.6807, -56.5245, -65.328, -61.386, -63.8907, -54.2492, -69.7922, -55.7229, -72.3422, -48.904, -80.158, -51.5335, -79.118, -39.4125)

[node name="FingBottomRight" type="Polygon2D" parent="Sprite"]
material = ExtResource("2_332jp")
position = Vector2(49, 18.0001)
rotation = -0.0795578
color = Color(0.498039, 0.254902, 0.701961, 1)
polygon = PackedVector2Array(-55.6639, -6.44421, -66.9039, 8.71044, -64.6286, 17.9204, -40.2708, 1.80523)

[node name="FingBottomLeft" type="Polygon2D" parent="Sprite"]
material = ExtResource("2_332jp")
position = Vector2(-11, 10.0001)
rotation = -0.0795578
color = Color(0.498039, 0.254902, 0.701961, 1)
polygon = PackedVector2Array(-55.6639, -6.44421, -63.516, 3.96468, -64.6286, 17.9204, -40.2708, 1.80523)

[node name="Body" type="Polygon2D" parent="Sprite"]
material = ExtResource("2_332jp")
position = Vector2(49, 18)
color = Color(0.658824, 0.423529, 0.870588, 1)
polygon = PackedVector2Array(-25, 10, 1, -3, 0, -42, -17.4899, -43.2493, -42, -45, -70.9359, -40.265, -97, -36, -116.323, -28.6885, -134, -22, -147.049, -33.9141, -157, -43, -153, 12, -143.309, 2.79399, -133, -7, -112, -2, -92, 2, -64.1454, 5.74966, -40, 9)

[node name="Eye" type="Polygon2D" parent="Sprite"]
material = ExtResource("2_332jp")
position = Vector2(53, 19.0001)
rotation = -0.120999
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-22.3366, -39.9885, -30.3717, -31.8992, -24.1471, -25.0981, -17.4668, -30.3301)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(63.25, 3)
shape = SubResource("RectangleShape2D_c40hq")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(37, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wuve0")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-53, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1nphv")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-32, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bnnsw")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-42, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_nt81s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bkgi0")
}

[node name="SwimAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ya3fx")
}

[node name="HurtAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7bjpq")
}

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
